--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+        <!--BOCK#01-->
         <div class="slider_chair">
             <div class="header">
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
@@ -35,6 +36,7 @@
                 <a href="#" class="circle"></a>
             </div>
         </div>
+        <!--BOCK#02(промежуточный_1)-->
         <div class="gap_block">
             <div class="gap_header">
                 <ul class="gap_header_menu_left">
@@ -98,6 +100,7 @@
                 </div>
             </div>
         </div>
+        <!--BOCK#03-->
         <div class="half_block">
             <div class="half_block_left" style="background-image: url(img/promo-img1.jpg)">
                 <div class="half_title">exclusive</div>
@@ -116,6 +119,71 @@
                 <a href="#" class="half_button">Order Us<img src="img/arrow.svg" height="12px" width="8px" alt=">"></a>
             </div>
         </div>
+        <!--BOCK#04(промежуточный_2)-->
+        <div class="gap2_block">
+            <div class="gap2_header">
+                <ul class="gap_header_menu_left">
+                    <li class="gap_header_menu_left_item">
+                        <a href="#" class="gap_header_menu_left_item_link gap_header_menu_left_item_link_active">Featured</a>
+                        <a href="#" class="gap_header_menu_left_item_link">New</a>
+                    </li>
+                </ul>
+                <ul class="gap_header_menu_right">
+                    <li>
+                        <a href="#" class="gap_header_menu_right_item_link">explore all<img src="img/arrow.svg" alt=">" width="9px" height="12px"></a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="gap_boxes">
+                <div class="gap_box" style="background-image: url(img/product-1.png)">
+                    <div class="box_cont">
+                        <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
+                        <h3 class="box_title">Fishnet Chair</h3>
+                        <p class="box_text">
+                            Seat and back with upholstery made of cold cure foam
+                            . Steel frame, available in matt powder-coated black
+                            or highly polished chrome.
+                        </p>
+                    </div>
+                </div>
+                <div class="gap_box" style="background-image: url(img/product-2.png)">
+                    <div class="box_cont">
+                        <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
+                        <h3 class="box_title">Fishnet Chair</h3>
+                        <p class="box_text">
+                            Seat and back with upholstery made of cold cure foam
+                            . Steel frame, available in matt powder-coated black
+                            or highly polished chrome.
+                        </p>
+                    </div>
+                </div>
+                <div class="gap_box" style="background-image: url(img/product-3.png)">
+                    <div class="box_cont">
+                        <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
+                        <h3 class="box_title">Fishnet Chair</h3>
+                        <p class="box_text">
+                            Seat and back with upholstery made of cold cure foam
+                            . Steel frame, available in matt powder-coated black
+                            or highly polished chrome.
+                        </p>
+                    </div>
+                </div>
+                <div class="gap_box" style="background-image: url(img/product-4.png)">
+                    <div class="box_cont">
+                        <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
+                        <h3 class="box_title">Fishnet Chair</h3>
+                        <p class="box_text">
+                            Seat and back with upholstery made of cold cure foam
+                            . Steel frame, available in matt powder-coated black
+                            or highly polished chrome.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
