--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+
         <!--BOCK#01-->
         <div class="slider_chair">
             <div class="header">
@@ -36,6 +37,7 @@
                 <a href="#" class="circle"></a>
             </div>
         </div>
+
         <!--BOCK#02(промежуточный_1)-->
         <div class="gap_block">
             <div class="gap_header">
@@ -100,6 +102,7 @@
                 </div>
             </div>
         </div>
+
         <!--BOCK#03-->
         <div class="half_block">
             <div class="half_block_left" style="background-image: url(img/promo-img1.jpg)">
@@ -119,14 +122,12 @@
                 <a href="#" class="half_button">Order Us<img src="img/arrow.svg" height="12px" width="8px" alt=">"></a>
             </div>
         </div>
+
         <!--BOCK#04(промежуточный_2)-->
         <div class="gap2_block">
             <div class="gap2_header">
-                <ul class="gap_header_menu_left">
-                    <li class="gap_header_menu_left_item">
-                        <a href="#" class="gap_header_menu_left_item_link gap_header_menu_left_item_link_active">Featured</a>
-                        <a href="#" class="gap_header_menu_left_item_link">New</a>
-                    </li>
+                <ul class="gap2_header_menu_left">
+                    <a href="#" class="gap2_header_menu_left_item_link gap2_header_menu_left_item_link_active">Trending Products</a>
                 </ul>
                 <ul class="gap_header_menu_right">
                     <li>
@@ -136,8 +137,8 @@
                 </ul>
             </div>
 
-            <div class="gap_boxes">
-                <div class="gap_box" style="background-image: url(img/product-1.png)">
+            <div class="gap2_boxes">
+                <div class="gap2_box" style="background-image: url(img/product-11.png)">
                     <div class="box_cont">
                         <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
                         <h3 class="box_title">Fishnet Chair</h3>
@@ -148,7 +149,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="gap_box" style="background-image: url(img/product-2.png)">
+                <div class="gap2_box" style="background-image: url(img/product-21.png)">
                     <div class="box_cont">
                         <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
                         <h3 class="box_title">Fishnet Chair</h3>
@@ -159,7 +160,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="gap_box" style="background-image: url(img/product-3.png)">
+                <div class="gap2_box" style="background-image: url(img/product-31.png)">
                     <div class="box_cont">
                         <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
                         <h3 class="box_title">Fishnet Chair</h3>
@@ -170,7 +171,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="gap_box" style="background-image: url(img/product-4.png)">
+                <div class="gap2_box" style="background-image: url(img/product-41.png)">
                     <div class="box_cont">
                         <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
                         <h3 class="box_title">Fishnet Chair</h3>
@@ -181,6 +182,29 @@
                         </p>
                     </div>
                 </div>
+                <div class="gap2_box" style="background-image: url(img/product-5.png)">
+                    <div class="box_cont">
+                        <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
+                        <h3 class="box_title">Fishnet Chair</h3>
+                        <p class="box_text">
+                            Seat and back with upholstery made of cold cure foam
+                            . Steel frame, available in matt powder-coated black
+                            or highly polished chrome.
+                        </p>
+                    </div>
+                </div>
+                <div class="gap2_box" style="background-image: url(img/product-6.png)">
+                    <div class="box_cont">
+                        <a href="#" class="button"><img src="img/arrow.svg" alt="arrow"></a>
+                        <h3 class="box_title">Fishnet Chair</h3>
+                        <p class="box_text">
+                            Seat and back with upholstery made of cold cure foam
+                            . Steel frame, available in matt powder-coated black
+                            or highly polished chrome.
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
