Добавил очередной блок

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -207,6 +207,22 @@
 
             </div>
         </div>
+
+        <!--BOCK#05-->
+        <div class="slider_table" style="background-image:   url(img/slider.jpg)" alt="table">
+            <div class="slider_text">
+                <div class="tranding tr_table">trending</div>
+                <h2 class="top_name">Fishnet Chair</h2>
+                <p class="str">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
+                    or highly polished chrome.</p>
+                <a href="#" class="button">Order Us</a>
+            </div>
+            <div class="slider_pag">
+                <a href="#" class="circle"></a>
+                <a href="#" class="circle circle_active"></a>
+                <a href="#" class="circle"></a>
+            </div>
+        </div>
     </div>
     </div>
 </body>
