--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
 
-        <!--BOCK#01-->
+        <!--BLOCK#01-->
         <div class="slider_chair">
             <div class="header">
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <!--BOCK#02(промежуточный_1)-->
+        <!--BLOCK#02(промежуточный_1)-->
         <div class="gap_block">
             <div class="gap_header">
                 <ul class="gap_header_menu_left">
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-        <!--BOCK#03-->
+        <!--BLOCK#03-->
         <div class="half_block">
             <div class="half_block_left" style="background-image: url(img/promo-img1.jpg)">
                 <div class="half_title">exclusive</div>
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        <!--BOCK#04(промежуточный_2)-->
+        <!--BLOCK#04(промежуточный_2)-->
         <div class="gap2_block">
             <div class="gap2_header">
                 <ul class="gap2_header_menu_left">
@@ -208,7 +208,7 @@
             </div>
         </div>
 
-        <!--BOCK#05-->
+        <!--BLOCK#05-->
         <div class="slider_table" style="background-image:   url(img/slider.jpg)" alt="table">
             <div class="slider_text">
                 <div class="tranding tr_table">trending</div>
@@ -223,6 +223,38 @@
                 <a href="#" class="circle"></a>
             </div>
         </div>
+
+        <!--BLOCK#06(промежуточный_3)-->
+        <div class="gap3_block">
+            <div class="pik_left" style="background-image: url(img/product-1-lg.jpg)" alt="pic">
+                <!--here-->
+                <div class="half_title pillow">exclusive</div>
+                <div class="half_name">Fishnet Chair</div>
+                <div class="half_text pollow">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
+                    powder-coated black
+                    or highly polished chrome.</div>
+                <a href="#" class="half_button">Order Us<img src="img/arrow.svg" height="12px" width="8px" alt=">"></a>
+            </div>
+            <div class="pic_right">
+                <div class="mini_pic" style="background-image: url(img/product-2-sm.jpg)" alt="pic"></div>
+                <div class="mini_pic" style="background-image: url(img/product-3-sm.jpg)" alt="pic"></div>
+                <div class="mini_pic" style="background-image: url(img/product-4-sm.jpg)" alt="pic"></div>
+                <div class="mini_pic" style="background-image: url(img/product-5-sm.jpg)" alt="pic"></div>
+            </div>
+        </div>
+
+        <!--BLOCK#07-->
+        <div class="mobile_block" style="border-image: url(img/back-img.jpg)">
+            <div class="mob_tag"></div>
+            <div class="mob_name"></div>
+            <div class="mob_datail"></div>
+            <div class="mob_apps"></div>
+
+        </div>
+
+
+
+
     </div>
     </div>
 </body>
