Mobile_block is done

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -244,12 +244,18 @@
         </div>
 
         <!--BLOCK#07-->
-        <div class="mobile_block" style="border-image: url(img/back-img.jpg)">
-            <div class="mob_tag"></div>
-            <div class="mob_name"></div>
-            <div class="mob_datail"></div>
-            <div class="mob_apps"></div>
-
+        <div class="mobile_block" style="background-image: url(img/back-img.jpg)">
+            <div class="mob_tag">mobile app</div>
+            <div class="mob_name">Find. Follow.<br>
+                Favorite.
+                <!--
+                
+                Discover brands<br>
+                on the go
+-->
+            </div>
+            <div class="mob_datail">Save your favorites and share your style.</div>
+            <div class="mob_apps"><img class="app_pic" src="img/app-store.jpg" alt=""><img class="app_pic" src="img/google-play.jpg" alt=""></div>
         </div>
 
 
