main-page is done

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -250,7 +250,6 @@
             <div class="mob_name">Find. Follow.<br>
                 Favorite.
                 <!--
-                
                 Discover brands<br>
                 on the go
 -->
@@ -259,10 +258,45 @@
             <div class="mob_apps"><img class="app_pic" src="img/app-store.jpg" alt=""><img class="app_pic" src="img/google-play.jpg" alt=""></div>
         </div>
 
+        <!--BLOCK#07 (footer)-->
+        <div class="footer">
+
+            <div class="footer_cont">
+                <div class="contacts">
+                    <div class="cont_tag">Contact Us</div>
+                    <div class="adress">132A Bridge Road Richmond VIC
+                        Australia.</div>
+                    <div class="adress">Talk to us on 1300 132
+                        info@interior.com</div>
+                </div>
+                <div class="info">
+                    <div class="info_tag">Useful Information</div>
+                    <ul class="info_list">
+                        <li class="info_line">Sales terms</li>
+                        <li class="info_line">Customer care</li>
+                        <li class="info_line">Delivery</li>
+                        <li class="info_line">Architect accounts</li>
+                        <li class="info_line">Careers</li>
+                        <li class="info_line">Exchanges & returns</li>
+                    </ul>
+                </div>
+                <div class="stay_colunm">
+                    <div class="stay_tag">Let’s Stay in Touch!</div>
+                    <div class="stay_message">Suscribe to know about our latest news, products and special offers just for suscribers.</div>
+
+                    <input class="mail" type="email" placeholder="your email address">
+                </div>
+            </div>
+
+            <div class="downline">
+                <div class="left_line">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
+                <img src="img/social-links.png" alt="social-links">
+                <div class="right_line">Terms & Conditions / Privacy policy & Cookies</div>
+
+            </div>
 
 
-
-    </div>
+        </div>
     </div>
 </body>
 
